Added API in For pages